// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MorphTitle > gives a repeated word a distinct name 1`] = `
<div>
  <h3>
    <span
      class="inline-block"
      style="view-transition-name: title-post-first-0;"
    >
      the
    </span>
     
    <span
      class="inline-block"
      style="view-transition-name: title-post-first-1;"
    >
      thing
    </span>
     
    <span
      class="inline-block"
      style="view-transition-name: title-post-first-2;"
    >
      and
    </span>
     
    <span
      class="inline-block"
      style="view-transition-name: title-post-first-3;"
    >
      the
    </span>
     
    <span
      class="inline-block"
      style="view-transition-name: title-post-first-4;"
    >
      other
    </span>
  </h3>
</div>
`;

exports[`MorphTitle > names one span per word 1`] = `
<div>
  <h3>
    <span
      class="inline-block"
      style="view-transition-name: title-post-first-0;"
    >
      Two
    </span>
     
    <span
      class="inline-block"
      style="view-transition-name: title-post-first-1;"
    >
      Words
    </span>
  </h3>
</div>
`;
